--- a/bootstrap学习/css/index.css
+++ b/bootstrap学习/css/index.css
@@ -49,10 +49,43 @@ header {
     float:left;
     width: 25%;
     height: 128px;
+    padding-right: 10px;
+    margin-bottom: 10px;
+}
+
+.news li a {
+    position:relative;
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 
 .news li:nth-child(1) {
     width: 50%;
     height: 266px;
-    background-color: pink;
+}
+.news li:nth-child(1) p {
+    line-height: 41px;
+    font-size: 20px;
+    padding: 0 10px;
+}
+.news li a img {
+    width:100%;
+    height:100%;
+}
+.news li a p {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 41px;
+    padding: 5px 10px;
+    margin-bottom:0;
+    background: rgba(0,0,0, .5);
+    font-size: 12px;
+    color: #fff;
+}
+
+.publish {
+    border-top: 1px solid #ccc;
 }
