--- a/bootstrap学习/css/index.css
+++ b/bootstrap学习/css/index.css
@@ -1,18 +1,45 @@
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-a {
-    color: #666;
-    text-decoration: none;
-}
-a:hover {
-    text-decoration: none;
-}
+/* color:#769694,#afb99b,#c4d1cd,#f3dccc */
 @media screen and (min-width: 1280px) {
     .container {
         width: 1280px;
     }
 }
+.navbar {
+    background-color: #769694!important;
+    font-size: 25px;
+    /* font-family: 'Cute Font', cursive; */
+    font-family: 'Sriracha', cursive;
+    color:white;
+    /* padding-top: 1px;
+    padding-bottom: 1px; */
+}
+.navbar-toggler .navbar-toggler-icon {
+    background-color: #769694;
+}
+.navbar-left img {
+    display: block;
+    float: left;
+    width: 302px;
+    height: 100px;
+    padding: 0;
+}
+.a {
+    float: left;
+}
 
+footer a.text-light:hover { color: #f3dccc!important; text-decoration: none; }
+footer .cizgi { border-right: 1px solid #afb99b; }
+@media (max-width: 992px) { footer .cizgi { border-right: none; } }
+
+.jumbotron {
+    background-color: #c4d1cd!important;
+}
+.card {
+    background-color: #afb99b!important;
+}
+#article{
+    background-image:url(https://i.ytimg.com/vi/xf8tRT8Nivk/maxresdefault.jpg);
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+}
