--- a/bootstrap学习/css/index.css
+++ b/bootstrap学习/css/index.css
@@ -1,11 +1,7 @@
 /* color:#769694,#afb99b,#c4d1cd,#f3dccc */
-@media screen and (min-width: 1280px) {
-    .container {
-        width: 1280px;
-    }
-}
+
 .navbar {
-    background-color: #769694!important;
+    background-color: #c4d1cd!important;
     font-size: 25px;
     /* font-family: 'Cute Font', cursive; */
     font-family: 'Sriracha', cursive;
@@ -32,14 +28,29 @@ footer .cizgi { border-right: 1px solid #afb99b; }
 @media (max-width: 992px) { footer .cizgi { border-right: none; } }
 
 .jumbotron {
-    background-color: #c4d1cd!important;
+    background-color: #96d6ed!important;
 }
 .card {
-    background-color: #afb99b!important;
+    background-color: transparent!important;
 }
 #article{
-    background-image:url(https://i.ytimg.com/vi/xf8tRT8Nivk/maxresdefault.jpg);
+    /* background-image:url(https://i.ytimg.com/vi/xf8tRT8Nivk/maxresdefault.jpg); */
     width: 100%;
     height: 100%;
     background-size: cover;
+}
+/* .row {
+    background-image:url('images/bigLogo.png');
+    background-repeat: no-repeat;
+    background-position:top;
+} */
+
+.copyright {
+    margin-top: 18px;
+    margin-bottom: 0;
+}
+
+.container-fluid {
+    background-image: url(http://image.lnstzy.cn/aoaodcom/2020-04/20/20200420120837da4b3512ef6f6f144ba6127229c21ea7.jpg.w1920.h1080.jpg?down);
+    background-repeat: no-repeat;
 }
