--- a/bootstrap学习/css/index.css
+++ b/bootstrap学习/css/index.css
@@ -105,13 +105,14 @@ footer .cizgi {
     display: inline-block;
     padding: 1.2em 2em;
     text-decoration: none;
-    text-align: center;
+    text-align: center!important;
+    text-height: 60px!important;
     cursor: pointer;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    color: white;
+    color: white!important;
 }
 
 .infoboard::before {
@@ -121,6 +122,7 @@ footer .cizgi {
     left: 20px;
     bottom: 20px;
     right: 20px;
+    height: 120px;
     background: linear-gradient(135deg, #6e8efb, #a777e3);
     border-radius: 4px;
     transition: box-shadow 0.5s ease, transform 0.2s ease;
@@ -136,7 +138,7 @@ footer .cizgi {
 .infoboard::after {
     position: relative;
     display: inline-block;
-    content: attr(data-title);
+    content: attr(title);
     transition: transform 0.2s ease;
     font-weight: bold;
     letter-spacing: 0.01em;
