--- a/bootstrap学习/css/index.css
+++ b/bootstrap学习/css/index.css
@@ -146,112 +146,54 @@ footer .cizgi {
     will-change: transform;
     transform: translateY(var(--ty, 0)) rotateX(var(--rx, 0)) rotateY(var(--ry, 0));
 }
-@import url("https://fonts.googleapis.com/css?family=Roboto:400,400i,700");
+@-webkit-keyframes sheen {
+  0% {
+    transform: skewY(-45deg) translateX(0);
+  }
+  100% {
+    transform: skewY(-45deg) translateX(12.5em);
+  }
+}
+@keyframes sheen {
+  0% {
+    transform: skewY(-45deg) translateX(0);
+  }
+  100% {
+    transform: skewY(-45deg) translateX(12.5em);
+  }
+}
 
-.wrapper {
-  display: flex;
-  width: 100%;
-  max-width: 800px;
-  height: 75%;
-  max-height: 600px;
-  perspective: 500px;
-  transform-style: preserve-3d;
-  transition: opacity 150ms ease-in-out;
-}
-.wrapper.loading {
-  opacity: 0;
-}
-
-.destination {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  color: white;
-  text-shadow: 0 0 6px #00080e;
-  transition: all 150ms ease-out;
-}
-.destination h1 {
-  font-size: 2.5em;
+.button {
+  padding: 0.75em 2em;
   text-align: center;
+  text-decoration: none;
+  color: #769694;
+  border: 2px solid #769694;
+  font-size: 24px;
+  display: inline-block;
+  border-radius: 0.3em;
+  transition: all 0.2s ease-in-out;
+  position: relative;
+  overflow: hidden;
 }
-.destination hr {
-  height: 1px;
-  background-color: white;
-  border: none;
-  width: 50px;
-}
-.destination p {
-  font-size: 1.2em;
-}
-.destination button {
-  border: none;
-  background-color: #b71c1c;
-  font-family: inherit;
-  color: white;
-  font-size: 1em;
-  padding: 0.5em 1em;
-  margin-top: 1em;
-  border-radius: 2em;
-  cursor: pointer;
-}
-.destination button:hover {
-  background-color: #d32f2f;
-}
-.destination img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  object-fit: cover;
-}
-.destination::after {
+.button:before {
   content: "";
+  background-color: rgba(255, 255, 255, 0.5);
+  height: 100%;
+  width: 3em;
+  display: block;
   position: absolute;
   top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  transition: opacity 100ms ease-in;
-  mix-blend-mode: multiply;
-  opacity: 0;
-  pointer-events: none;
+  left: -4.5em;
+  transform: skewX(-45deg) translateX(0);
+  transition: none;
 }
-.destination.unfolded {
-  flex: 8 1;
+.button:hover {
+  background-color: #c4d1cd;
+  color: #fff;
+  border-bottom: 4px solid #c4d1cd;
 }
-.destination.unfolded.front {
-  transform: translateZ(20px);
-}
-.destination.unfolded.back {
-  transform: translateZ(-20px);
-}
-.destination.unfolded.back::after {
-  background: linear-gradient(to right, black 0%, white 25%, white 75%, black 100%);
-  opacity: 0.5;
-}
-.destination.folded {
-  flex: 1 8;
-}
-.destination.folded h1, .destination.folded hr, .destination.folded p, .destination.folded button {
-  display: none;
-}
-.destination.folded::after {
-  opacity: 0.6;
-}
-.destination.folded.right {
-  transform: rotateY(-30deg) scaleX(1.16);
-}
-.destination.folded.right::after {
-  background: linear-gradient(to left, white, black);
-}
-.destination.folded.left {
-  transform: rotateY(30deg) scaleX(1.16);
-}
-.destination.folded.left::after {
-  background: linear-gradient(to right, white, black);
+.button:hover:before {
+  transform: skewX(-45deg) translateX(16.5em);
+  transition: all 0.5s ease-in-out;
 }
