--- a/bootstrap学习/css/index.css
+++ b/bootstrap学习/css/index.css
@@ -47,7 +47,7 @@ footer .cizgi {
 }
 
 .jumbotron {
-    background-color: #96d6ed!important;
+    background-color: #c4d1cd!important;
     margin-top: 0!important;
 }
 
