--- a/bootstrap学习/css/index.css
+++ b/bootstrap学习/css/index.css
@@ -192,3 +192,9 @@ footer .cizgi {
   transform: skewX(-45deg) translateX(16.5em);
   transition: all 0.5s ease-in-out;
 }
+
+@media(max-width:768px){
+    .carousel-item img {
+        height: 250px!important;
+    }
+}
