--- a/bootstrap学习/css/index.css
+++ b/bootstrap学习/css/index.css
@@ -69,6 +69,12 @@ footer .cizgi {
     align-items: center;
 }
 
+@media(max-width:576px){
+    #contacts {
+        height: 250px;
+    }
+}
+
 .copyright {
     margin-top: 18px;
     margin-bottom: 0;
