--- a/bootstrap学习/css/gallery-grid.css
+++ b/bootstrap学习/css/gallery-grid.css
@@ -6,6 +6,8 @@
     border-radius: 20px;
     box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);
     max-width: 1380px;
+    padding-top: 20px;
+    margin-top: 10px;
 }
 
 @media(max-width:576px) {
@@ -16,7 +18,7 @@
 
 .gallery-container h1 {
     text-align: center;
-    margin-top: 70px;
+    margin-top: 0px;
     font-family: 'Droid Sans', sans-serif;
     font-weight: bold;
 }
