--- a/bootstrap学习/css/index.css
+++ b/bootstrap学习/css/index.css
@@ -41,6 +41,17 @@
         padding:9px 24px 9px 24px;
         margin-bottom: 5px;
     }
+    .infoboard {
+        height: 135px;
+    }
+    .infoboard::after {
+        margin-bottom: 10px!important;
+        display: block;
+    }
+    #infoboard :nth-child(3) {
+        margin-bottom: 0px!important;
+        display: block;
+    }
 }
 
 .a {
@@ -220,5 +231,12 @@ footer .cizgi {
 @media(max-width:768px){
     .carousel-item img {
         height: 250px!important;
+    }
+}
+
+@media(min-width:1780px) {
+    #party-pics .img-fluid {
+        width: 100%;
+        height: auto;
     }
 }
