--- a/bootstrap学习/css/commonstyle.css
+++ b/bootstrap学习/css/commonstyle.css
@@ -30,7 +30,7 @@ ul{
 	position:absolute;
 	left:348px;
 	border-radius: 4px;
-	border: 5px solid #f3dccc;
+	border: 4px solid #96d6ed;
 }
 
 @-webkit-keyframes stripe-slide {
