css style changed

--- a/bootstrap学习/css/index.css
+++ b/bootstrap学习/css/index.css
@@ -103,7 +103,7 @@ footer .cizgi {
     background-color: transparent!important;
 }
 #card-group .card {
-    /* margin-right: 5px; */
+    background-color: #f8f9fa!important;
 
 } 
 
