--- a/bootstrap学习/css/preload.css
+++ b/bootstrap学习/css/preload.css
@@ -1,3 +1,34 @@
+#index .navbar {
+  padding-left: 0;
+  margin-bottom: 20px;
+}
+@media(max-width: 575px) {
+  #index .navbar img {
+    height: 24px;
+  }
+}
+
+#story {
+  background-color: #fcf9f4;
+  color: #769694;
+  border-radius: 20px;
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);
+  max-width: 1380px;
+  padding-top: 20px;
+  margin-top: 10px;
+  height: 250px;
+}
+
+#membership {
+  background-color: #fcf9f4;
+  color: #769694;
+  border-radius: 20px;
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.06);
+  max-width: 1380px;
+  padding-top: 20px;
+  margin-top: 10px;
+}
+
 .ctn-preloader {
     -webkit-box-align: center;
     -ms-flex-align: center;
