--- a/bootstrap学习/css/preload.css
+++ b/bootstrap学习/css/preload.css
@@ -3,8 +3,12 @@
   margin-bottom: 20px;
 }
 
-
-
+#index .container {
+  display: flex;
+}
+#index .container:last-child {
+  margin-left: auto;
+}
 
 @media(max-width: 575px) {
   #index .navbar img {
