--- a/bootstrap学习/css/index.css
+++ b/bootstrap学习/css/index.css
@@ -58,9 +58,10 @@
         display: block;
     }
     .card {
-        margin: 4px 10px 0px 10px;
+        margin: 4px 10px 0px 10px!important;
         /* height: 50%; */
         /* text-align: center; */
+        border-radius: 8px!important;
     }
     .card-img-top {
         margin-left: auto;
