--- a/bootstrap学习/css/index.css
+++ b/bootstrap学习/css/index.css
@@ -1,7 +1,9 @@
 /* color:#769694,#afb99b,#c4d1cd,#f3dccc */
-/* body {
+/* html {
     background-image: url(../images/playground3.png);
-    background-repeat: repeat;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
     background-size: cover;
 } */
 
@@ -117,9 +119,9 @@ footer .cizgi {
 
 
 #contacts {
-    background-image: url(../images/playground.jpg);
+    background-image: url(../images/RobYNVQ8Yl.jpg);
     width: 100%;
-    height: 340px;
+    height: 380px;
     background-size: cover;
     display: flex;
     display: -webkit-flex;
