--- a/bootstrap学习/css/index.css
+++ b/bootstrap学习/css/index.css
@@ -285,7 +285,8 @@ footer .cizgi {
     width: 33%;
 }
 .gallery:hover {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+    box-shadow: 0 0 6px rgb(35 173 255);
     border-radius: 12px;
 
 }
