--- a/bootstrap学习/css/gallery-grid.css
+++ b/bootstrap学习/css/gallery-grid.css
@@ -15,15 +15,19 @@
         padding: 3px;
     }
 }
-
+@keyframes h1bgcolor {
+    from {background-color: none;}
+    to {background-color: rgba(250,157,183, 0.5);}
+}
 .gallery-container h1 {
     text-align: center;
-    margin-top: 0px;
+    margin: 0px -12px!important;
+    padding: 0px 12px;
     font-family: 'Nunito', sans-serif;
     font-weight: bold;
     color: #769694;
-    background-image: none;
-    transition: background-image 2s;
+    animation-name: h1bgcolor;
+    animation-duration: 2s;
 }
 .gallery-container h1 {
     background-image: linear-gradient(to top, rgba(250,157,183, 0.5), rgba(250,157,183, 0.5));
