--- a/bootstrap学习/css/index.css
+++ b/bootstrap学习/css/index.css
@@ -280,7 +280,7 @@ footer .cizgi {
     /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
     box-shadow: 0 0 6px rgb(35 173 255);
     border-radius: 12px;
-
+    transform: rotateY(360deg);
 }
 @media only screen and (max-width: 768px) {
     .responsive {
